[project]
name = "kickbase-dashboard"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "gshirato", email = "g8ta18@gmail.com" }
]
dependencies = [
    "ipykernel>=6.29.5",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/kickbase_dashboard"]
